code generation wip (nightmare)
